--- a/Front/src/tpl/flow-edit.html
+++ b/Front/src/tpl/flow-edit.html
@@ -2,9 +2,9 @@
   <div class="col-sm-4 col-md-4 cs-flow-tree">
     <div ng-click="editFlow()" ng-class="{'cs-flow-active':onEdit=='flow'}" class="tree-li" ng-show="flowMode">
       <i class="material-icons tree-icon">album</i>
-      <span class="cs-flow-name">{{flowss.name}}</span>
+      <span class="cs-flow-name">{{flow.name}}</span>
     </div>
-    <div ng-repeat="rule in flowss.rules" class="cs-flow-rule">
+    <div ng-repeat="rule in flow.rules" class="cs-flow-rule">
       <div ng-click="editRule(rule)" class="tree-li" ng-class="{
         'cs-flow-active': onEdit=='rule' && curRule==rule,
         'cs-rule-default': rule.isDefault,
@@ -75,33 +75,34 @@
 
     <div class="cs-deleted-mask" ng-if="isDeleted"></div>
 
-    <form name="editFlowForm" method="post" ng-submit="$event.preventDefault()" class="form-content" ng-show="onEdit=='flow'" ng-if="flowMode">
+    <form name="editFlowForm" method="post" ng-submit="$event.preventDefault()" class="form-content" ng-show="onEdit=='flow' && flowMode">
       <div class="form-group">
         <label class="label-name">Name:</label>
-        <input type="text" class="form-control" ng-class="{error:flowss._nameError}" ng-model="flowss.name" required name="name"
+        <input type="text" class="form-control" ng-class="{error:flow._nameError}" ng-model="flow.name" required name="name"
           ng-change="nameChanged(flow)"
           ng-blur="nameRequired()"
           async-check-name="checkNameParams"
           async-validator-callback="validateCallback"
 
         >
-        <span class-"error-message" ng-show="flowss._nameError">Name is invalid</span>
+        <span class-"error-message" ng-show="flow._nameError">Name is invalid</span>
         <span style="color:red" ng-show="editFlowForm.name.$invalid">
             <span ng-show="editFlowForm.name.$error.asyncCheckName">Name already exists.</span>
             <span ng-show="editFlowForm.name.$error.nameRequired">Name is required.</span>
         </span>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" ng-if="flowMode">
         <label class="label-name">Country:</label>
         <md-autocomplete
-            md-selected-item="flowss.country"
+            md-selected-item="flow.country"
             md-search-text="searchText"
             md-items="item in queryCountries(searchText)"
             md-no-cache="true"
             md-select-on-focus="true"
             md-item-text="item.display"
             md-min-length="0"
+            md-selected-item-change="countryChanged(flow.country)"
             placeholder="Select country...">
           <md-item-template>
             <span md-highlight-text="searchText">{{item.display}}</span>
@@ -116,13 +117,13 @@
         <label class="col-sm-4 control-label label-radio">Default redirect mode:</label>
         <div class="col-sm-8">
           <label class="radio-inline">
-            <input type="radio" ng-model="flowss.redirectMode" value="0"> 302
+            <input type="radio" ng-model="flow.redirectMode" value="0"> 302
           </label>
           <label class="radio-inline">
-            <input type="radio" ng-model="flowss.redirectMode" value="1"> Meta refresh
+            <input type="radio" ng-model="flow.redirectMode" value="1"> Meta refresh
           </label>
           <label class="radio-inline">
-            <input type="radio" ng-model="flowss.redirectMode" value="2"> Double meta refresh
+            <input type="radio" ng-model="flow.redirectMode" value="2"> Double meta refresh
           </label>
         </div>
       </div>
