--- a/Front/src/tpl/lander-edit-dialog.html
+++ b/Front/src/tpl/lander-edit-dialog.html
@@ -65,6 +65,7 @@
                 <label class="col-sm-3 control-label">Country: </label>
                 <div class="col-sm-8 my-select">
                     <select class="cs-subform-select" name="country"
+                        ng-disabled="countryInputDisabled"
                         ng-model="item.country"
                         ng-change="countryChanged(item.country)"
                     >
