--- a/Front/src/tpl/report.html
+++ b/Front/src/tpl/report.html
@@ -13,7 +13,7 @@
             <div class="cs-subform-control">
                 <select class="cs-subform-select" ng-model="groupBy[0]" placeholder="Choose grouping" ng-change="changeGroupby(0)">
                     <!--<option value="">Choose grouping</option>-->
-                    <option value="{{gb.value}}" ng-repeat="gb in groupByOptions" ng-if="gb.role != 'campaign'">{{gb.display}}</option>
+                    <option value="{{gb.value}}" ng-repeat="gb in groupByOptions">{{gb.display}}</option>
                 </select>
             </div>
             <div class="cs-subform-control">
@@ -135,7 +135,7 @@
                   <span ng-if="column.role=='name' && treeLevel==1">
                     <md-menu-bar style="padding: 0;">
                         <md-menu>
-                            <a ng-click="$mdMenu.open()">{{row.data[column.key]}}</a>
+                            <a ng-click="menuOpen($mdMenu, row)">{{row.data[column.key]}}</a>
                             <md-menu-content width="3">
                                 <md-menu-item ng-if="canEdit"><md-button ng-click="editItem($event, row)">Edit</md-button></md-menu-item>
                                 <md-menu-item ng-if="canEdit"><md-button ng-click="editItem($event, row, true)">Duplicate</md-button></md-menu-item>
@@ -145,7 +145,7 @@
                                         <md-button ng-click="$mdMenu.open()">Drilldown by...</md-button>
                                         <md-menu-content width="3">
                                             <md-menu-item ng-repeat="gb in groupByOptions | filter:drilldownFilter">
-                                                <md-button ng-click="drilldown(row, gb)">{{gb.display}}</md-button>
+                                                <md-button ng-click="drilldown(row, gb)">{{gb.display}} <em ng-if="gb.role == 'campaign'">: {{gb.paramValue}}</em></md-button>
                                             </md-menu-item>
                                         </md-menu-content>
                                     </md-menu>
