--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -227,7 +227,7 @@
                 </div>
                 <div class="url-tokens-row form-group">
                     <label class="col-sm-3 control-label"></label>
-                    <div class="col-sm-5">
+                    <div class="col-sm-8">
                         <i>Available URL tokens:</i>
                         <div class="url-tokens">
                             <div class="url-token"
@@ -333,7 +333,7 @@
               </div>
             </div>
         </form>
-        <div class="" ng-show="item.targetType == 2">
+        <div class="campaign-path-box row" ng-show="item.targetType == 2">
           <div ng-controller="FlowEditCtrl" ng-include="pathRoute"></div>
         </div>
     </md-dialog-content>
