--- a/Front/src/index.html
+++ b/Front/src/index.html
@@ -66,6 +66,7 @@
 <script src="../bower_components/angular-clipboard/angular-clipboard.js"></script>
 <script src="../bower_components/angular-awesome-slider/dist/angular-awesome-slider.min.js"></script>
 <script src="../bower_components/angular-momentjs/angular-momentjs.js"></script>
+<script src="../bower_components/angular-permission/dist/angular-permission.js"></script>
 
 <!-- App -->
 <script src="js/app.js"></script>
