--- a/Front/src/tpl/campaign-edit-dialog.html
+++ b/Front/src/tpl/campaign-edit-dialog.html
@@ -334,7 +334,7 @@
             </div>
         </form>
         <div class="campaign-path-box row" ng-show="item.targetType == 2">
-          <div ng-controller="FlowEditCtrl" ng-include="pathRoute"></div>
+          <div class="col-md-offset-1 col-md-10" ng-controller="FlowEditCtrl" ng-include="pathRoute"></div>
         </div>
     </md-dialog-content>
 
