--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -11,7 +11,7 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New bidder</title>
+    <title>Newbidder</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="x-icon" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/swiper.min.css">
@@ -83,6 +83,14 @@
                 <span class="line -top"></span>
                 <span class="line -left"></span>
                 <span class="line -bottom"></span></a></li>
+            <li><a href="#section-3">
+                <span class="text">Contact</span>
+                <span class="line -right"></span>
+                <span class="line -top"></span>
+                <span class="line -left"></span>
+                <span class="line -bottom"></span>
+            </a>
+            </li>
             <li><a href="http://panel.newbidder.com/#/access/signin">
                 <span class="text">Sign in</span>
                 <span class="line -right"></span>
@@ -90,8 +98,7 @@
                 <span class="line -left"></span>
                 <span class="line -bottom"></span>
             </a></li>
-            <li><a class="freetrial-btn" href="http://panel.newbidder.com/free/trial">
-                Free Trial
+            <li><a class="freetrial-btn" href="http://panel.newbidder.com/free/trial">Free Trial
             </a>
             </li>
         </ul>
@@ -451,7 +458,7 @@
     </table>
 </div>
 
-<footer class="footer-box">
+<footer class="footer-box" id="section-3">
     <div class="container">
         <div class="row">
             <div class="col-md-8 col-xs-6">
@@ -459,6 +466,7 @@
                 <div class="col-xs-12 col-md-6">
                 <h4>Contact</h4>
                 <span><a href="mailto:contact@newbidder.com"><i class="icon-envelope"></i>contact@newbidder.com</a></span><br>
+                <span><a href="#"><i class="icon-skype icon-skype-font"></i>live:support_44609</a></span><br>
                 <h4 class="con-title">Get Connected</h4>
                 <ul class="list-01">
                     <li><a href="https://www.facebook.com/newbidder" target="_blank"><i class="icon-facebook-sign"></i>Facebook</a></li>
