remove freetrial button

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -98,9 +98,7 @@
                 <span class="line -left"></span>
                 <span class="line -bottom"></span>
             </a></li>
-            <li><a class="freetrial-btn" href="http://panel.newbidder.com/free/trial">Free Trial
-            </a>
-            </li>
+
         </ul>
 </div>
 <div class="container">
@@ -253,7 +251,7 @@
                         </div>
                         <div class="col-sm-3 col-md-3">
                             <input type="text" name="eventsSliderNumber" value="" class="eventsSliderNumber numberField" placeholder="">
-                            <a href="http://panel.newbidder.com/free/trial"><button class="register-btn btn-three" type="button">Sign in</button></a>
+                            <a href="http://panel.newbidder.com/#/access/signin"><button class="register-btn btn-three" type="button">Sign in</button></a>
                             </div>
                         </div>
                     </div>
