--- a/Front/src/tpl/user-delete-dialog.html
+++ b/Front/src/tpl/user-delete-dialog.html
@@ -1,6 +1,6 @@
 <md-dialog class="md-default-theme" ng-cloak>
     <md-dialog-content class="md-dialog-content">
-        <p>Do you really want to remove invitation for 2@Newbidder.com?</p>
+        <p>Do you really want to remove invitation for {{invitation.email}}?</p>
     </md-dialog-content>
 
     <md-dialog-actions>
