--- a/Front/src/tpl/subscriptions.html
+++ b/Front/src/tpl/subscriptions.html
@@ -71,3 +71,80 @@
     </div>
   </div>
 </div>
+
+<!-- Google Code for free plan Conversion Page -->
+<script type="text/javascript">
+	/* <![CDATA[ */
+	var google_conversion_id = 859286781;
+	var google_conversion_language = "en";
+	var google_conversion_format = "3";
+	var google_conversion_color = "ffffff";
+	var google_conversion_label = "Ac5ICKyRkW8Q_dnemQM";
+	var google_remarketing_only = false;
+	/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+	<div style="display:inline;">
+		<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/859286781/?label=Ac5ICKyRkW8Q_dnemQM&amp;guid=ON&amp;script=0"/>
+	</div>
+</noscript>
+
+<!-- Google Code for Pro Conversion Page -->
+<script type="text/javascript">
+	/* <![CDATA[ */
+	var google_conversion_id = 859286781;
+	var google_conversion_language = "en";
+	var google_conversion_format = "3";
+	var google_conversion_color = "ffffff";
+	var google_conversion_label = "E99tCMqRkW8Q_dnemQM";
+	var google_remarketing_only = false;
+	/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+	<div style="display:inline;">
+		<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/859286781/?label=E99tCMqRkW8Q_dnemQM&amp;guid=ON&amp;script=0"/>
+	</div>
+</noscript>
+
+<!-- Google Code for agency Conversion Page -->
+<script type="text/javascript">
+	/* <![CDATA[ */
+	var google_conversion_id = 859286781;
+	var google_conversion_language = "en";
+	var google_conversion_format = "3";
+	var google_conversion_color = "ffffff";
+	var google_conversion_label = "0y78CNORkW8Q_dnemQM";
+	var google_remarketing_only = false;
+	/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+	<div style="display:inline;">
+		<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/859286781/?label=0y78CNORkW8Q_dnemQM&amp;guid=ON&amp;script=0"/>
+	</div>
+</noscript>
+
+<!-- Google Code for enterprise Conversion Page -->
+<script type="text/javascript">
+	/* <![CDATA[ */
+	var google_conversion_id = 859286781;
+	var google_conversion_language = "en";
+	var google_conversion_format = "3";
+	var google_conversion_color = "ffffff";
+	var google_conversion_label = "fEnQCM3Sl28Q_dnemQM";
+	var google_remarketing_only = false;
+	/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+	<div style="display:inline;">
+		<img height="1" width="1" style="border-style:none;" alt="" src="//www.googleadservices.com/pagead/conversion/859286781/?label=fEnQCM3Sl28Q_dnemQM&amp;guid=ON&amp;script=0"/>
+	</div>
+</noscript>
+
