add ChoosePlan on main page

--- a/www.newbidder.com/index.html
+++ b/www.newbidder.com/index.html
@@ -165,8 +165,9 @@
                         <li>3 month data <b>retention</b></li>
                         <li>1 custom tracking <b>domains</b></li>
                     </ol>
-                    <!--<button class="btn p-btn btn-three p-btn-01" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
-
+                    <a href="http://panel.newbidder.com/#/access/signup">
+                    <button class="btn p-btn btn-three p-btn-01" type="button"><p>Choose Plan<i class="icon-angle-right"></i></p></button>
+                    </a>
                 </div></li>
 
          <li class="w-md w-md3 h-line2">
@@ -188,7 +189,9 @@
                      <li>1 additional users</li>
                      <li>10% volume discount</li>
                  </ol>
-                 <!--<button class="btn p-btn btn-three p-btn-02" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>!-->
+                 <a href="http://panel.newbidder.com/#/access/signup">
+                 <button class="btn p-btn btn-three p-btn-02" type="button"><p>Choose Plan<i class="icon-angle-right"></i></p></button>
+                 </a>
 
            </div></li>
        <li class="w-md w-md3 h-line3">
@@ -210,7 +213,9 @@
                <li>2 additional users</li>
                <li>15% volume discount</li>
            </ol>
-               <!--<button class="btn p-btn btn-three p-btn-03" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>!-->
+              <a href="http://panel.newbidder.com/#/access/signup">
+                  <button class="btn p-btn btn-three p-btn-02" type="button"><p>Choose Plan<i class="icon-angle-right"></i></p></button>
+              </a>
 
         </div></li>
         <li class="w-md w-md3 h-line4">
@@ -232,7 +237,9 @@
                     <li>5 additional users</li>
                     <li>20% volume discount</li>
                 </ol>
-                <!--<button class="btn p-btn btn-three p-btn-04" type="button"><p>SELECT PLAN<i class="icon-angle-right"></i></p></button>-->
+                <a href="http://panel.newbidder.com/#/access/signup">
+                <button class="btn p-btn btn-three p-btn-02" type="button"><p>Choose Plan<i class="icon-angle-right"></i></p></button>
+                </a>
             </div>
         </li>
     </ul>
